components jornadas-juegos-goles working so good

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -21,3 +21,13 @@ body, html{
     align-content: center;
     
   }
+
+
+.top-jornada{
+  margin-top: 2rem;
+  margin-left: 5rem;
+}
+
+.top-3rem{
+  margin-top: 3rem;
+}
